# agora-mls

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  test_join.sh  test_join_simple.sh
docs/: external_join_proposal_handling.md  issue_18_implementation_plan.md  key_package_collision_fix.md  phase_2_architecture.md
proto/: chat.proto
src/: agora_chat.rs  app.rs  app_state.rs.OLD  cli.rs  command.rs  config.rs  crypto_identity_actor.rs  error.rs  handle_command.rs  identity.rs  identity_actor.rs  key_package.rs  lib.rs  main.rs  network.rs  openmls_actor.rs  processor.rs  protobuf_proposal.md  protobuf_wrapper.rs  safety_number.rs  state_actor.rs  state_actor_handler.rs  temp.txt  tui.rs
